# elogbook

./: .env.example  .gitignore  Cargo.toml  README.md  Trunk.toml  docker-compose.yml
backend/: .env.example  Cargo.toml
backend/src/: attachments.rs  config.rs  download.rs  handlers.rs  lib.rs  main.rs  models.rs  state.rs
backend/tests/: http.rs
frontend/: Cargo.toml
frontend/public/: resize.js  styles.css
frontend/src/: api.rs  app.rs  components.rs  config.rs  js_bridge.rs  main.rs  models.rs  render.rs
public/: index.html  preview.js  styles.css  textarea.js
src/: api.rs  lib.rs  main.rs  models.rs
src/frontend/: api.rs  app.rs  components.rs  config.rs  js_bridge.rs  mod.rs  models.rs  render.rs
src/server/: attachments.rs  config.rs  download.rs  error.rs  handlers.rs  mod.rs  models.rs  state.rs
tests/: http.rs
