[package]
name = "elogbook"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
actix-cors = "0.7"
actix-files = "0.6"
actix-multipart = "0.7"
actix-web = "4"
dotenvy = "0.15"
futures-util = "0.3"
mongodb = "3.7"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread"] }
uuid = { version = "1.23", features = ["v4"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = { version = "0.7", default-features = false, features = ["http", "json"] }
gloo-timers = "0.4"
html-escape = "0.2"
js-sys = "0.3"
pulldown-cmark = "0.13"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Blob",
    "console",
    "Document",
    "Element",
    "File",
    "FormData",
    "HtmlElement",
    "Request",
    "RequestInit",
    "Response",
    "Window",
] }
yew = { version = "0.23", features = ["csr"] }

[dev-dependencies]
serde_json = "1.0"
