[package]
name = "elogbook"
version.workspace = true
edition.workspace = true
rust-version = "1.88"

[dependencies]
actix-cors = "0.7"
actix-files = "0.6"
actix-multipart = "0.7"
actix-web = "4"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
dotenvy = "0.15"
futures-util = "0.3"
mongodb = "3.7"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread"] }
uuid = { version = "1.23", features = ["v4"] }

[dev-dependencies]
serde_json = "1.0"
