[package]
name = "frontend"
version.workspace = true
edition.workspace = true
rust-version = "1.84"

[dependencies]
yew = { version = "0.23", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-net = { version = "0.7", default-features = false, features = ["http", "json"] }
gloo-timers = "0.4"
serde = { version = "1.0", features = ["derive"] }
web-sys = { version = "0.3", features = [
    "Blob",
    "console",
    "Document",
    "Element",
    "File",
    "FormData",
    "HtmlElement",
    "Request",
    "RequestInit",
    "Response",
    "Window",
] }
chrono = "0.4"
js-sys = "0.3"
pulldown-cmark = "0.13"
html-escape = "0.2"
